ingress/host-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: host-ingress
spec:
        rules:
                - host: mytomcat.example.com
                  http:
                          paths:
                                  - path: "/"
                                    backend:
                                          serviceName: mytomcat
                                          servicePort: 8080
