ingress/simple-ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: simple-ingress
spec:
        backend:
                serviceName: mytomcat
                servicePort: 8080
